Realizei a tela de perfil

--- a/static_devconnect/pages/index.html
+++ b/static_devconnect/pages/index.html
@@ -27,22 +27,23 @@
                 <div class="formulario-campos">
                     <label for="">Nome de usuario:</label>
                     <input type="text" name="" id="">
+                </div>
+                <div class="formulario-campos">
+                    <label for="">Senha:</label>
+                    <input type="password" name="" id="">
+                </div>
 
-                    <div class="formulario-campos">
-                        <label for="">Senha:</label>
-                        <input type="password" name="" id="">
-                    </div>
+                <button type="submit" class="formulario-botao-bege"
+             >Entrar</button>
 
-                    <button type="submit">Entrar</button>
-
-                    <p>ou</p>
-                    <a href="#">Esqueceu a senha?</a>
+                <p>ou</p>
+                <a href="#">Esqueceu a senha?</a>
 
             </form>
 
             <section id="secao-cadastro" class="estilo-formulario">
 
-                 Não tem uma conta? <a href="#">Cadastre-se</a>
+                Não tem uma conta? <a href="#">Cadastre-se</a>
             </section>
 
             <p> Obtenha o aplicativo</p>
